Added check to ensure no empty messages

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,10 +10,10 @@
   <body class="flex h-screen max-w-full p-0 overflow-hidden">
     <!-- SIDEBAR -->
     <div class="bg-gray-200 w-2/5">
-      <button id="select-dir" class="bg-blue-500 text-white font-bold content-center mx-3 mt-5 py-2 px-2 rounded opacity-50">
+      <button id="select-dir" class="bg-blue-500 text-white font-bold content-center mx-3 mt-5 py-2 px-2 rounded-lg opacity-50">
         Add Directory
       </button>
-      <button id="clear-dir" class="bg-gray-400 text-white font-bold content-center mx-3 mt-2 py-2 px-4 rounded opacity-50">
+      <button id="clear-dir" class="bg-gray-400 text-white font-bold content-center mx-3 mt-2 py-2 px-4 rounded-lg opacity-50">
         Clear
       </button>
       <div class="m-5 text-gray-700 text-sm">
@@ -23,7 +23,7 @@
     </div>
 
     <!-- CHAT WINDOW -->
-    <div class="flex-auto w-full">
+    <div class="flex-auto w-full overflow-y-scroll mb-20">
       <!-- MESSAGES -->
       <div id="messages-container" class="mt-5 mb-16 text-white">
 
