Fixed text overflow

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -30,25 +30,14 @@
         <!-- SINGLE MESSAGE -->
         <div class="clearfix">
           <div class="bg-gray-300 w-3/5 mx-4 my-2 p-4 rounded-xl">
-            Lorem ipsum blah blah blah.
-          </div>
-        </div>
-
-        <!-- SINGLE MESSAGE 2 -->
-        <div class="clearfix">
-          <div class="bg-gray-300 w-3/5 mx-4 my-2 p-4 rounded-xl clearfix">
-            Hello world Hello world Hello world Hello world Hello world Hello world Hello world Hello world 
-          </div>
-        </div>
-
-        <!-- SINGLE MESSAGE 3 -->
-        <div class="clearfix">
-          <div class="bg-blue-500 float-right w-3/5 mx-4 my-2 p-4 rounded-xl clearfix">
-            Thank you. I love this app it is the best app in the whole world.
+            Hello, how can I help you today?
           </div>
         </div>
       </div>
-    
+      
+      <div class="absolute bottom-20 mx-10">
+        <button id="chat-clear" class="bg-gray-100 rounded-xl text-gray-400 text-sm mx-auto justify-center px-3">Clear Chat</button>
+      </div>
       <!-- Inputs -->
       <div class="absolute bottom-5 justify-center w-4/5 mx-5">
         <input id="chat-text" class="bg-gray-100 rounded-xl w-3/5 mx-5 px-5 py-3 text-gray-700 focus:outline-none focus:shadow-outline" type="text" id="chat" />
