--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -29,7 +29,7 @@
 
         <!-- SINGLE MESSAGE -->
         <div class="clearfix" >
-          <div class="bg-gray-300 w-3/5 mx-4 my-2 p-4 rounded-xl">
+          <div class="bg-gray-300 text-gray-700 w-3/5 mx-4 my-2 p-4 rounded-xl">
             Hello, how can I help you today?
           </div>
         </div>
