--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -19,13 +19,27 @@
       <div class="m-5 text-gray-700 text-sm">
         <!-- List of files -->
         <ul id="file-list"></ul>
+        <!-- LOADER -->
+        <div id="file-loader" class="hidden animate-pulse flex space-x-4">
+          <div class="flex-1 space-y-6 py-1">
+            <div class="space-y-3">
+              <div class="grid grid-cols-3 grid-rows-3 gap-4">
+                <div class="col-start-1 col-span-3 h-2 bg-slate-300 rounded"></div>
+                <div class="col-start-1 col-span-2 h-2 bg-slate-300 rounded"></div>
+                <div class="col-start-1 col-span-2 h-2 bg-slate-300 rounded"></div>
+                <div class="col-start-1 col-span-3 h-2 bg-slate-300 rounded"></div>
+                <div class="col-start-1 col-span-2 h-2 bg-slate-300 rounded"></div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
     <!-- CHAT WINDOW -->
     <div class="flex-auto w-full overflow-y-scroll mb-20">
       <!-- MESSAGES -->
-      <div id="messages-container" class="mt-5 mb-16 text-white">
+      <div id="messages-container" class="mt-5 mb-5 text-white">
 
         <!-- SINGLE MESSAGE -->
         <div class="clearfix" >
@@ -34,6 +48,19 @@
           </div>
         </div>
       </div>
+      <!-- LOADER MESSAGE -->
+      <div id="chat-loader" class="hidden clearfix" >
+        <div class="animate-pulse flex space-x-4">
+          <div class="bg-slate-200 w-3/5 mx-4 my-2 p-4 rounded-xl">
+            <div class="grid grid-cols-3 grid-rows-2 gap-4">
+              <div class="h-2 bg-slate-300 rounded col-span-2"></div>
+              <div class="h-2 bg-slate-300 rounded col-span-1"></div>
+              <div class="h-2 bg-slate-300 rounded col-span-1"></div>
+              <div class="h-2 bg-slate-300 rounded col-span-2"></div>
+            </div>
+          </div>
+      </div>
+      </div>  
       
       <div class="absolute bottom-20 mx-10">
         <button id="chat-clear" class="bg-gray-100 rounded-xl text-gray-400 text-sm mx-auto justify-center px-3">Clear Chat</button>
