--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -29,6 +29,8 @@
                 <div class="col-start-1 col-span-2 h-2 bg-slate-300 rounded"></div>
                 <div class="col-start-1 col-span-3 h-2 bg-slate-300 rounded"></div>
                 <div class="col-start-1 col-span-2 h-2 bg-slate-300 rounded"></div>
+                <div class="col-start-1 col-span-2 h-2 bg-slate-300 rounded"></div>
+                <div class="col-start-1 col-span-2 h-2 bg-slate-300 rounded"></div>
               </div>
             </div>
           </div>
