--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>DirectoryGPT</title>
     <link rel="stylesheet" href="index.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="render.js"></script>
@@ -45,7 +45,7 @@
 
         <!-- SINGLE MESSAGE -->
         <div class="clearfix" >
-          <div class="bg-gray-300 text-gray-700 w-3/5 mx-4 my-2 p-4 rounded-xl">
+          <div class="bg-gray-300 text-gray-700 w-3/5 mx-4 my-2 p-4 rounded-xl break-words">
             Hello, how can I help you today?
           </div>
         </div>
