Coming soon msg

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -87,6 +87,7 @@
             <div class="absolute cursor-pointer text-gray-400 top-0 w-8 h-8 flex items-center justify-center right-0 mt-5 mr-5">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
             </div>
+            <div class="text-gray-400 font-bold grid h-screen place-items-center">Collaboration Coming Soon!</div>
         </div>
       </div>
       
